Fix drag+drop on Mojave and enable dark mode in Mojave based on OS-level preference

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -496,7 +496,7 @@ body.has-active-search [data-search-match="direct"] > .sticker__caption {
 }
 
 .search-highlight {
-  background-color: #FBBC04;
+  background-color: var(--theme-color-search-highlight);
   border-radius: 4px;
 }
 
